tests/expectations/compiler/finalize/increment_fail.out
Error [ETYC0372005]: Unknown function `increment`
    --> compiler-test:10:9
     |
  10 |         increment(amounts, addr, amount);
     |         ^^^^^^^^^
